# GraniteDB

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: db.rs  document.rs  lib.rs  main.rs
src/aggregation/: mod.rs  pipeline.rs  stages.rs
src/ai/: embedding_pipeline.rs  inference.rs  mod.rs  semantic.rs
src/auth/: encryption.rs  mod.rs  rbac.rs  user.rs
src/cache/: bloom.rs  lru.rs  mod.rs
src/cli/: main.rs
src/collection/: collection.rs  mod.rs
src/compression/: compressor.rs  mod.rs
src/config/: mod.rs  settings.rs
src/cursor/: cursor.rs  mod.rs
src/database/: database.rs  mod.rs
src/document/: bson.rs  document.rs  mod.rs  validation.rs
src/error/: mod.rs
src/geo/: distance.rs  geo_index.rs  mod.rs  types.rs
src/index/: btree.rs  hash_index.rs  manager.rs  mod.rs
src/metrics/: collector.rs  mod.rs
src/network/: connection.rs  handler.rs  mod.rs  protocol.rs  server.rs
src/query/: executor.rs  filter.rs  mod.rs  parser.rs  planner.rs
src/replication/: mod.rs  oplog.rs  replica.rs
src/search/: analyzer.rs  inverted_index.rs  mod.rs  scoring.rs  search_engine.rs
src/sharding/: mod.rs  router.rs  shard.rs
src/storage/: buffer_pool.rs  disk.rs  engine.rs  mod.rs  page.rs  wal.rs
src/stream/: mod.rs  watcher.rs
src/transaction/: manager.rs  mod.rs  mvcc.rs
src/utils/: helpers.rs  mod.rs
src/vector/: distance.rs  embedding.rs  hnsw.rs  mod.rs  quantizer.rs  vector_index.rs
