[package]
name = "granitedb"
version = "0.1.0"
edition = "2024"
description = "GraniteDB — A blazing-fast, document-oriented NoSQL database engine built in Rust"
license = "Apache-2.0"
repository = "https://github.com/kritarth1107/GraniteDB"
keywords = ["database", "nosql", "document-store", "rust"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Unique identifiers
uuid = { version = "1.0", features = ["v4"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Crypto / hashing
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
argon2 = "0.5"

# CLI
clap = { version = "4", features = ["derive"] }

# Misc
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5"
bytes = "1"
crc32fast = "1.4"
memmap2 = "0.9"
regex = "1"

[[bin]]
name = "granitedb"
path = "src/main.rs"

[[bin]]
name = "granite-cli"
path = "src/cli/main.rs"
